# terminator_task_manager

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  claude.md  problem
shell-integration/: README.md  starship.toml  tasks-prompt.sh
src/: main.rs
src/daemon/: main.rs
src/db/: mod.rs
src/models/: mod.rs
src/notes/: mod.rs
src/notify/: mod.rs
src/pomodoro/: mod.rs
src/ui/: mod.rs  note_list.rs  pomodoro_view.rs  task_list.rs
