[package]
name = "terminator-task"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An integrated terminal task manager with pomodoro and notes"

# 多个二进制文件配置
[[bin]]
name = "tasks"
path = "src/main.rs"

[[bin]]
name = "taskd"
path = "src/daemon/main.rs"

[dependencies]
# TUI 界面
ratatui = "0.28"
crossterm = "0.28"

# 数据库
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 系统通知
notify-rust = "4.11"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 命令行参数
clap = { version = "4.5", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# IPC通信
interprocess = "2.2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置文件
directories = "5.0"

[dev-dependencies]
tempfile = "3.13"
